@@ -6,7 +6,7 @@
     "major_version": 1,
     "minor_version": 1,
     "generator_name": "crystal-facet-uml",
-    "generator_version": "1.62.4-pre2"
+    "generator_version": "1.62.4-pre3"
   }
   ,
   "views":
